--- a/style.css
+++ b/style.css
@@ -1,14 +1,46 @@
-/*------------------------Colors*/
+ a:hover {
+    text-decoration: none;
+}
+
+#title-heading{
+    font-family: 'Srisakdi', cursive;
+}
+
+/*------------------------Images*/
+#cover-image{
+    width:100%;
+    height: 100%;
+    padding-top: 5px;
+}
+/*------------------------GalleryGrid*/
+.row{
+    overflow: hidden; 
+}
+
+[class*="col-"]{
+    margin-bottom: -99999px;
+    padding-bottom: 99999px;
+}
+
+#GalleryGrid{
+    margin-left: 25px;
+    margin-right: 25px;
+}
 
 
+/*------------------------NavBar*/
 
+#primary-nav-bar{
+padding-top: 10px;
+}
 
-
-
-
-
-
-
+#primary-nav-bar li{
+text-align: center;
+display: inline;
+list-style-type: none;
+padding-right: 20px;
+margin: auto;
+}
 
 
 /*------------------------Others*/
@@ -39,26 +71,35 @@
 /*------------------------Media Queries*/
 @media only screen and (min-width: 320px) {
     body {
-        background-color: lightblue;
+        background-color: lightgrey;
     }
 }
 
 @media only screen and (min-width: 480px) {
     body {
-        background-color: pink;
+        background-color: lightgrey;
     }
 }
 
 @media only screen and (min-width: 768px) {
     body {
-        background-color: red;
+        background-color: lightgrey;
     }
 }
 
 @media only screen and (min-width: 1024px) {
     body {
-        background-color: purple;
+        background-color: lightgrey;
     }
 }
 
 /*------------------------Images*/
+
+
+/*------------------------Logos*/
+
+.icons {
+   margin-top: 25px;
+   text-align: center;
+   font-size: 25px;
+}
