--- a/style.css
+++ b/style.css
@@ -108,3 +108,9 @@ margin: auto;
     margin: auto;
     width: 80%;
 }
+
+/*------------------------New Works Table*/
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
